LOG Updated to 0.6.5.2 (by updates_builder)

--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  "igraph_0.5.5-4.tar.gz:"	f1cea8002c44a9f06d5966021382a4ab2c915184
+  igraph_0.6.5-2.tar.gz: b9cf54a76f6da5d303b219994391339981962e76
